# economics-bachelors-thesis

./: .gitignore  .pytask.sqlite3  aws_sync.sh  aws_sync_down.sh  aws_sync_up.sh  ec2_user_data.sh
citations/: founders_2020.md
code/: observations.md  pyproject.toml  todo.md
code/data_exploration/: bert.py  distributions.py  exploration.py  human_annotation.py  observations.md  role_models.py  sbert.py  ses.py  text_corrections.py  todo.md  topic_modelling.py  visualization.py  zero_shot.py
code/evaluation/: eval_role_models.py  eval_semantic_clustering.py  eval_topic_modelling.py  eval_zero_shot.py  lib_semantic_clustering.py  lib_topic_modelling.py  lib_zero_shot.py  thesis_content_data.py  thesis_content_semantic_clustering.py  thesis_content_unsupervised.py  thesis_content_zero_shot.py
code/nlp_course/: .python-version  000_python_text.py  001_nlp_off_the_shelf.py  002_text_classification.py  pyproject.toml
code/tasks/: .gitignore  excluded_sentences.py  task_articles_preparation.py  task_balancing.py  task_human_annotation.py  task_latex.py  task_preparation.py  task_role_models.py  task_semantic_embedding.py  task_ses.py  task_thesis_content.py  task_tokenization.py  task_topic_modelling.py  task_zero_shot.py
code/test/: test_article_preparation.py  test_balancing.py  test_preparation.py  test_semantic_embedding.py  test_ses.py  test_tokenization.py  test_topic_modelling.py  test_zero_shot.py
organization/: _pre_submission_todos.md  content.md  intro.md  meeting_20221212.md  meeting_20230123.md  outlook.md  roter_faden.md  structure.md  titles.md
(+101 files in other folders)
