[tool.poetry]
name = "econ-ba"
version = "0.1.0"
description = ""
authors = ["Maximilian Schattauer <max@schattauer.info>"]
readme = "README.md"
packages = [{include = "econ_ba"}]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.9.3"
spacy = "^3.4.3"
textacy = "^0.12.0"
ipykernel = "^6.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
